--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -14,7 +14,7 @@ ul li {
 }
 body .footer {
   z-index: 1;
-  --footer-background:#001B58;
+  --footer-background:#6892f5;
   display: grid;
   position: relative;
   grid-area: footer;
